# clicker

./: CMakeLists.txt
src/: businesses.cpp  businesses.hpp  main.cpp  main.hpp  utility.cpp  utility.hpp
